tarjeta profile 2 responsiva ok

--- a/index.html
+++ b/index.html
@@ -94,13 +94,15 @@
                     <div class="contenedor-profile-card contenedor-profile-card-gsap">
                         <div class="content">
                             <div class="card-1">
-                                <div class="firstinfo"><img src="https://randomuser.me/api/portraits/lego/6.jpg" />
+                                <div class="firstinfo"><img class="ocultar-img"
+                                        src="https://randomuser.me/api/portraits/lego/6.jpg" />
                                     <div class="profileinfo">
-                                        <h1>Francesco Moustache</h1>
-                                        <h3>Python Ninja</h3>
-                                        <p class="bio">Lived all my life on the top of mount Fuji, learning the way to
-                                            be a
-                                            Ninja Dev.</p>
+                                        <h1>Christian Jiménez C.</h1>
+                                        <h3>Full Stack JS Developer</h3>
+                                        <p class="bio"><b>Objetivo Macro:</b> Convertirme en un desarrollador
+                                            nivel Ninja.<br><span class="br-oculto"><br></span>
+                                            "Mi día a día se sumerge entre código y una máxima de mejora
+                                            continua."</p>
                                     </div>
                                 </div>
                                 <div class="cuadrado-rotado">
