--- a/index.html
+++ b/index.html
@@ -65,15 +65,12 @@
                             </div>
                             <code><span class="variable">this</span><span>.</span><span class="method">addEventListener</span><span>(</span><span class="string">'mouseover'</span><span>, </span><span class="function">() => </span><span>{ </span>
                             <div class="indent"><span class="variable">this</span><span>.</span><span class="property">giraTarjeta </span><span>= </span><span class="boolean">true</span><span>;</span></div><span>});</span>
-                        
                             <div>&nbsp;</div><div>&nbsp;</div><div>&nbsp;</div>
                                 <div><span class="puntos-gsap">.</span><span class="puntos-gsap">.</span><span class="puntos-gsap">.</span></div>
                         </code>
                         </div>
                     </div>
                 </div>
-
-
             </div>
             <ul class="circles">
                 <li></li>
@@ -100,9 +97,7 @@
                                         <h1>Christian Jiménez C.</h1>
                                         <h3>Full Stack JS Developer</h3>
                                         <p class="bio"><b>Objetivo Macro:</b> Convertirme en un desarrollador
-                                            nivel Ninja.<br><span class="br-oculto"><br></span>
-                                            "Mi día a día se sumerge entre código y una máxima de mejora
-                                            continua."</p>
+                                            nivel Ninja.</p>
                                     </div>
                                 </div>
                                 <div class="cuadrado-rotado">
@@ -110,24 +105,58 @@
                                 </div>
                             </div>
                             <div class="badgescard badgescard-flex badgescard-gsap">
-                                <i class="devicon-html5-plain"></i>
-                                <i class="devicon-css3-plain"></i>
-                                <i class="devicon-sass-original"></i>
-                                <i class="devicon-javascript-plain"></i>
-                                <i class="devicon-react-original"></i>
-                                <i class="devicon-angularjs-plain"></i>
-                                <i class="devicon-nodejs-plain"></i>
-                                <i class="devicon-nextjs-plain-wordmark"></i>
-                                <i class="devicon-mysql-plain"></i>
-                                <i class="devicon-mongodb-plain"></i>
-                                <i class="devicon-firebase-plain"></i>
-                                <i class="devicon-visualstudio-plain"></i>
-                                <i class="devicon-aftereffects-plain"></i>
-                                <i class="devicon-illustrator-plain"></i>
-                                <i class="devicon-premierepro-plain"></i>
-                                <i class="devicon-photoshop-line"></i>
+                                <i class="devicon-html5-plain icon-skill"></i>
+                                <i class="devicon-css3-plain icon-skill"></i>
+                                <i class="devicon-sass-original icon-skill"></i>
+                                <i class="devicon-wordpress-plain icon-skill"></i>
+                                <i class="devicon-javascript-plain icon-skill"></i>
+                                <i class="devicon-react-original icon-skill"></i>
+                                <i class="devicon-nodejs-plain icon-skill"></i>
+                                <i class="devicon-mysql-plain icon-skill"></i>
+                                <i class="devicon-mongodb-plain icon-skill"></i>
+                                <i class="devicon-firebase-plain icon-skill"></i>
+                                <i class="devicon-photoshop-plain icon-skill"></i>
+                                <i class="devicon-illustrator-plain icon-skill"></i>
+                                <i class="devicon-aftereffects-plain icon-skill"></i>
+                                <i class="devicon-premierepro-plain icon-skill"></i>
                             </div>
                         </div>
+                    </div>
+
+                    <div>
+                        "Mi día a día se sumerge entre código y una máxima de mejora
+                        continua."
+                    </div>
+                    <div>
+
+
+
+
+                        <p>
+                            ¡Hola! Soy un apasionado del desarrollo web. Mi objetivo es ayudarte a crear soluciones
+                            tecnológicas efectivas y atractivas que impulsen tu presencia en línea.
+                            En mi enfoque, me involucro plenamente en el día a día de mis clientes. Creo firmemente en
+                            comprender a fondo tus necesidades y metas para ofrecerte un producto de calidad que supere
+                            tus expectativas. Cada cliente es una experiencia única y me adapto a sus requerimientos
+                            específicos.
+                            Además de mi experiencia en desarrollo, también poseo habilidades en marketing, diseño y
+                            gestión de proyectos. Puedo ayudarte a crear un logo impactante y una marca sólida que
+                            refleje la identidad que buscas. Como también puedo asistirte en el lanzamiento exitoso de
+                            tu
+                            negocio.
+                            Siempre busco oportunidades para aprender y crecer, por lo cual me he forjado una mentalidad
+                            autodidacta y disfruto del aprendizaje continuo. Además de mi pasión por el desarrollo,
+                            tengo otros intereses como los juegos, la lectura y la búsqueda de conocimiento en diversas
+                            áreas.
+                            He estado involucrado en proyectos propios, donde he puesto en práctica mis habilidades de
+                            codificación y creación de contenido multimedia.
+                            Actualmente, desempeño el cargo de Gerente de Logística en una empresa del rubro de
+                            ingeniería, donde he tenido la oportunidad de desplegar mis capacidades y gestionar procesos
+                            en todos los niveles.
+                            ME emociona enfrentar nuevos desafíos y trabajar contigo para llevar tu negocio al
+                            siguiente nivel. Si buscas un desarrollador o un profesional en marketing dedicado a brindar
+                            soluciones personalizadas, ¡no dudes en contactarme!
+                        </p>
                     </div>
                 </div>
             </div>
@@ -322,7 +351,15 @@
     <footer>
     </footer>
     <div id="precarga" class="nombre">
-        <span>CJJC</span>
+        <div class="sk-chase">
+            <div class="sk-chase-dot"></div>
+            <div class="sk-chase-dot"></div>
+            <div class="sk-chase-dot"></div>
+            <div class="sk-chase-dot"></div>
+            <div class="sk-chase-dot"></div>
+            <div class="sk-chase-dot"></div>
+        </div>
+        <!-- <span>CJJC</span> -->
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
