commit antes de cambiar de luggar la tarjeta 2 - 02

--- a/index.html
+++ b/index.html
@@ -88,50 +88,11 @@
         <section id="section-2" class="section-pagina setcion-2"><!-- absoluto -->
             <div class="div-relativo  section-flex"><!-- relativo -->
                 <div class="fondo-about fondo-about-gsap">
-                    <div class="contenedor-profile-card contenedor-profile-card-gsap">
-                        <div class="content">
-                            <div class="card-1">
-                                <div class="firstinfo"><img class="ocultar-img"
-                                        src="https://randomuser.me/api/portraits/lego/6.jpg" />
-                                    <div class="profileinfo">
-                                        <h1>Christian Jiménez C.</h1>
-                                        <h3>Full Stack JS Developer</h3>
-                                        <p class="bio"><b>Objetivo Macro:</b> Convertirme en un desarrollador
-                                            nivel Ninja.</p>
-                                    </div>
-                                </div>
-                                <div class="cuadrado-rotado">
-
-                                </div>
-                            </div>
-                            <div class="badgescard badgescard-flex badgescard-gsap">
-                                <i class="devicon-html5-plain icon-skill"></i>
-                                <i class="devicon-css3-plain icon-skill"></i>
-                                <i class="devicon-sass-original icon-skill"></i>
-                                <i class="devicon-wordpress-plain icon-skill"></i>
-                                <i class="devicon-javascript-plain icon-skill"></i>
-                                <i class="devicon-react-original icon-skill"></i>
-                                <i class="devicon-nodejs-plain icon-skill"></i>
-                                <i class="devicon-mysql-plain icon-skill"></i>
-                                <i class="devicon-mongodb-plain icon-skill"></i>
-                                <i class="devicon-firebase-plain icon-skill"></i>
-                                <i class="devicon-photoshop-plain icon-skill"></i>
-                                <i class="devicon-illustrator-plain icon-skill"></i>
-                                <i class="devicon-aftereffects-plain icon-skill"></i>
-                                <i class="devicon-premierepro-plain icon-skill"></i>
-                            </div>
-                        </div>
-                    </div>
-
                     <div>
                         "Mi día a día se sumerge entre código y una máxima de mejora
                         continua."
                     </div>
                     <div>
-
-
-
-
                         <p>
                             ¡Hola! Soy un apasionado del desarrollo web. Mi objetivo es ayudarte a crear soluciones
                             tecnológicas efectivas y atractivas que impulsen tu presencia en línea.
@@ -258,7 +219,42 @@
             <div class="div-relativo  section-flex"><!-- relativo -->
                 <!--                 <div class="id-txt">
                     CONTACTO
+
                 </div> -->
+                <div class="contenedor-profile-card contenedor-profile-card-gsap">
+                    <div class="content">
+                        <div class="card-1">
+                            <div class="firstinfo"><img class="ocultar-img"
+                                    src="https://randomuser.me/api/portraits/lego/6.jpg" />
+                                <div class="profileinfo">
+                                    <h1>Christian Jiménez C.</h1>
+                                    <h3>Full Stack JS Developer</h3>
+                                    <p class="bio"><b>Objetivo Macro:</b> Convertirme en un desarrollador
+                                        nivel Ninja.</p>
+                                </div>
+                            </div>
+                            <div class="cuadrado-rotado">
+
+                            </div>
+                        </div>
+                        <div class="badgescard badgescard-flex badgescard-gsap">
+                            <i class="devicon-html5-plain icon-skill"></i>
+                            <i class="devicon-css3-plain icon-skill"></i>
+                            <i class="devicon-sass-original icon-skill"></i>
+                            <i class="devicon-wordpress-plain icon-skill"></i>
+                            <i class="devicon-javascript-plain icon-skill"></i>
+                            <i class="devicon-react-original icon-skill"></i>
+                            <i class="devicon-nodejs-plain icon-skill"></i>
+                            <i class="devicon-mysql-plain icon-skill"></i>
+                            <i class="devicon-mongodb-plain icon-skill"></i>
+                            <i class="devicon-firebase-plain icon-skill"></i>
+                            <i class="devicon-photoshop-plain icon-skill"></i>
+                            <i class="devicon-illustrator-plain icon-skill"></i>
+                            <i class="devicon-aftereffects-plain icon-skill"></i>
+                            <i class="devicon-premierepro-plain icon-skill"></i>
+                        </div>
+                    </div>
+                </div>
                 <div class="background">
                     <div class="container-contact">
                         <div class="screen">
@@ -284,21 +280,14 @@
                                         <div class="menu-rss">
                                             <div class="label">Sígueme:</div>
                                             <div class="spacer"></div>
-                                            <div class="item-rrss"><span><a href="#" target="_blank"><ion-icon
-                                                            name="logo-linkedin"></ion-icon></a></span>
-                                            </div>
-                                            <div class="item-rrss"><span><a href="#" target="_blank"><ion-icon
-                                                            name="logo-instagram"></ion-icon></a></span>
-                                            </div>
-                                            <div class="item-rrss"><span><a href="#" target="_blank"><ion-icon
-                                                            name="logo-facebook"></ion-icon></a></span>
-                                            </div>
-                                            <div class="item-rrss"><span><a href="#" target="_blank"><ion-icon
-                                                            name="logo-twitter"></ion-icon></a></span>
-                                            </div>
-                                            <div class="item-rrss"><span><a href="#" target="_blank"><ion-icon
-                                                            name="logo-twitch"></ion-icon></a></span>
-                                            </div>
+                                            <div class="item-rrss"><span><a href="#" target="_blank"><i
+                                                            class="devicon-linkedin-plain"></i></a></span></div>
+                                            <div class="item-rrss"><span><a href="#" target="_blank"><i
+                                                            class="devicon-facebook-plain"></i></a></span></div>
+                                            <div class="item-rrss"><span><a href="#" target="_blank"><i
+                                                            class="devicon-twitter-original"></i></a></span></div>
+                                            <!-- <div class="item-rrss"><span><a href="#" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></span></div> -->
+                                            <!-- <div class="item-rrss"><span><a href="#" target="_blank"><ion-icon name="logo-twitch"></ion-icon></a></span></div> -->
                                         </div>
                                     </div>
                                 </div>
